--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
     name: clarity-ai-backend
-    runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    runtime: docker
+    plan: starter
     envVars:
       - key: OPENROUTER_API_KEY
         sync: false
